@@ -10,19 +10,11 @@
 package org.weasis.core.ui.editor.image;
 
 import java.awt.BorderLayout;
-import java.awt.Color;
 import java.awt.Component;
-import java.awt.Cursor;
 import java.awt.Dialog;
 import java.awt.Dialog.ModalityType;
 import java.awt.Dimension;
 import java.awt.Frame;
-import java.awt.GridBagConstraints;
-import java.awt.GridBagLayout;
-import java.awt.Point;
-import java.awt.Rectangle;
-import java.awt.event.InputEvent;
-import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
 import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
@@ -30,27 +22,27 @@ import java.beans.PropertyChangeListener;
 import java.lang.reflect.Constructor;
 import java.util.ArrayList;
 import java.util.Comparator;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
 import java.util.Objects;
 import java.util.Optional;
 import javax.swing.Icon;
 import javax.swing.JComponent;
 import javax.swing.JDialog;
 import javax.swing.JPanel;
-import javax.swing.plaf.PanelUI;
+import net.miginfocom.swing.MigLayout;
 import org.weasis.core.Messages;
 import org.weasis.core.api.explorer.model.DataExplorerModel;
+import org.weasis.core.api.gui.layout.LayoutCellManager;
+import org.weasis.core.api.gui.layout.MergedCellsBuilder;
+import org.weasis.core.api.gui.layout.MigCell;
+import org.weasis.core.api.gui.layout.MigLayoutModel;
 import org.weasis.core.api.gui.util.ActionState;
 import org.weasis.core.api.gui.util.ActionW;
 import org.weasis.core.api.gui.util.ComboItemListener;
 import org.weasis.core.api.gui.util.Filter;
 import org.weasis.core.api.gui.util.GuiExecutor;
 import org.weasis.core.api.gui.util.WinUtil;
-import org.weasis.core.api.image.GridBagLayoutModel;
-import org.weasis.core.api.image.LayoutConstraints;
 import org.weasis.core.api.media.data.ImageElement;
 import org.weasis.core.api.media.data.MediaSeries;
 import org.weasis.core.api.media.data.Series;
@@ -71,88 +63,88 @@ public abstract class ImageViewerPlugin<E extends ImageElement> extends ViewerPl
 
   // A model must have at least one view that inherited of DefaultView2d
   public static final Class<?> view2dClass = ViewCanvas.class;
-  public static final GridBagLayoutModel VIEWS_1x1 =
-      new GridBagLayoutModel(
+  public static final MigLayoutModel VIEWS_1x1 =
+      new MigLayoutModel(
           "1x1", // NON-NLS
           String.format(Messages.getString("ImageViewerPlugin.1"), "1x1"), // NON-NLS
           1,
           1,
           view2dClass.getName());
-  public static final GridBagLayoutModel VIEWS_2x1 =
-      new GridBagLayoutModel(
+  public static final MigLayoutModel VIEWS_2x1 =
+      new MigLayoutModel(
           "2x1", // NON-NLS
           String.format(F_VIEWS, "2x1"), // NON-NLS
           2,
           1,
           view2dClass.getName());
-  public static final GridBagLayoutModel VIEWS_1x2 =
-      new GridBagLayoutModel(
+  public static final MigLayoutModel VIEWS_1x2 =
+      new MigLayoutModel(
           "1x2", // NON-NLS
           String.format(F_VIEWS, "1x2"), // NON-NLS
           1,
           2,
           view2dClass.getName());
-  public static final GridBagLayoutModel VIEWS_1x3 =
-      new GridBagLayoutModel(
+  public static final MigLayoutModel VIEWS_1x3 =
+      new MigLayoutModel(
           "1x3", // NON-NLS
           String.format(F_VIEWS, "1x3"), // NON-NLS
           1,
           3,
           view2dClass.getName());
-  public static final GridBagLayoutModel VIEWS_1x4 =
-      new GridBagLayoutModel(
+  public static final MigLayoutModel VIEWS_1x4 =
+      new MigLayoutModel(
           "1x4", // NON-NLS
           String.format(F_VIEWS, "1x4"), // NON-NLS
           1,
           4,
           view2dClass.getName());
-  public static final GridBagLayoutModel VIEWS_2x2_f2 =
-      new GridBagLayoutModel(
-          ImageViewerPlugin.class.getResourceAsStream("/config/layoutModel2x2_f2.xml"), // NON-NLS
-          "layout_c2x1", // NON-NLS
-          Messages.getString("ImageViewerPlugin.layout_c2x1"));
-  public static final GridBagLayoutModel VIEWS_2_f1x2 =
-      new GridBagLayoutModel(
-          ImageViewerPlugin.class.getResourceAsStream("/config/layoutModel2_f1x2.xml"), // NON-NLS
-          "layout_r1x2", // NON-NLS
-          Messages.getString("ImageViewerPlugin.layout_c1x2"));
-  public static final GridBagLayoutModel VIEWS_2x2 =
-      new GridBagLayoutModel(
+  public static final MigLayoutModel VIEWS_2x2_f2 =
+      new MergedCellsBuilder(2, 2, "layout_c2x1", "3 views (right merged)", view2dClass.getName())
+          .addCell(0, 0)
+          .addMergedCell(0, 1, 1, 2)
+          .addCell(1, 0)
+          .build();
+  public static final MigLayoutModel VIEWS_2_f1x2 =
+      new MergedCellsBuilder(2, 2, "layout_r1x2", "3 views (top merged)", view2dClass.getName())
+          .addMergedCell(0, 0, 2, 1)
+          .addCell(1, 0)
+          .addCell(1, 1)
+          .build();
+  public static final MigLayoutModel VIEWS_2x2 =
+      new MigLayoutModel(
           "2x2", // NON-NLS
           String.format(F_VIEWS, "2x2"), // NON-NLS
           2,
           2,
           view2dClass.getName());
-  public static final GridBagLayoutModel VIEWS_2x3 =
-      new GridBagLayoutModel(
+  public static final MigLayoutModel VIEWS_2x3 =
+      new MigLayoutModel(
           "2x3", // NON-NLS
           String.format(F_VIEWS, "2x3"), // NON-NLS
           2,
           3,
           view2dClass.getName());
-  public static final GridBagLayoutModel VIEWS_2x4 =
-      new GridBagLayoutModel(
+  public static final MigLayoutModel VIEWS_2x4 =
+      new MigLayoutModel(
           "2x4", // NON-NLS
           String.format(F_VIEWS, "2x4"), // NON-NLS
           2,
           4,
           view2dClass.getName());
 
-  public record LayoutModel(String uid, GridBagLayoutModel model) {}
+  public record LayoutModel(String uid, MigLayoutModel model) {}
 
   /** The current focused <code>ImagePane</code>. The default is 0. */
   protected ViewCanvas<E> selectedImagePane = null;
 
-  /** The array of display panes located in this image view panel. */
-  protected final ArrayList<ViewCanvas<E>> view2ds;
-
-  protected final ArrayList<Component> components;
+  /** The layout cell manager that handles ViewCanvas and Component placement */
+  protected final LayoutCellManager<E> cellManager;
 
   protected SynchView synchView = SynchView.DEFAULT_STACK;
 
   protected final ImageViewerEventManager<E> eventManager;
   protected final JPanel grid;
-  protected GridBagLayoutModel layoutModel;
+  protected final MigLayout migLayout;
 
   protected ImageViewerPlugin(ImageViewerEventManager<E> eventManager, String pluginName) {
     this(eventManager, VIEWS_1x1, pluginName, null, null, null);
@@ -160,7 +152,7 @@ public abstract class ImageViewerPlugin<E extends ImageElement> extends ViewerPl
 
   protected ImageViewerPlugin(
       ImageViewerEventManager<E> eventManager,
-      GridBagLayoutModel layoutModel,
+      MigLayoutModel layoutModel,
       String uid,
       String pluginName,
       Icon icon,
@@ -170,18 +162,15 @@ public abstract class ImageViewerPlugin<E extends ImageElement> extends ViewerPl
       throw new IllegalArgumentException("EventManager cannot be null");
     }
     this.eventManager = eventManager;
-    view2ds = new ArrayList<>();
-    components = new ArrayList<>();
+    this.cellManager = new LayoutCellManager<>(VIEWS_1x1.copy());
     grid = new JPanel();
-    // For having a black background with any Look and Feel
-    grid.setUI(new PanelUI() {});
-    grid.setBackground(Color.BLACK);
     grid.setFocusCycleRoot(true);
-    grid.setLayout(new GridBagLayout());
+    migLayout = new MigLayout();
+    grid.setLayout(migLayout);
     add(grid, BorderLayout.CENTER);
 
     setLayoutModel(layoutModel);
-    MouseHandler mouseHandler = new MouseHandler();
+    GridMouseHandler mouseHandler = new GridMouseHandler(cellManager, grid);
     grid.addMouseListener(mouseHandler);
     grid.addMouseMotionListener(mouseHandler);
   }
@@ -192,7 +181,7 @@ public abstract class ImageViewerPlugin<E extends ImageElement> extends ViewerPl
    */
   public abstract boolean isViewType(Class<?> defaultClass, String type);
 
-  public abstract int getViewTypeNumber(GridBagLayoutModel layout, Class<?> defaultClass);
+  public abstract int getViewTypeNumber(MigLayoutModel layout, Class<?> defaultClass);
 
   public abstract ViewCanvas<E> createDefaultView(String classType);
 
@@ -200,14 +189,14 @@ public abstract class ImageViewerPlugin<E extends ImageElement> extends ViewerPl
 
   public abstract Class<?> getSeriesViewerClass();
 
-  public abstract GridBagLayoutModel getDefaultLayoutModel();
+  public abstract MigLayoutModel getDefaultLayoutModel();
 
   public ViewCanvas<E> getSelectedImagePane() {
     return selectedImagePane;
   }
 
   public List<ViewCanvas<E>> getView2ds() {
-    return view2ds;
+    return cellManager.getAllViewCanvases();
   }
 
   public ImageViewerEventManager<E> getEventManager() {
@@ -221,7 +210,7 @@ public abstract class ImageViewerPlugin<E extends ImageElement> extends ViewerPl
     GuiExecutor.execute(
         () -> {
           removeComponents();
-          for (ViewCanvas v : view2ds) {
+          for (ViewCanvas<E> v : cellManager) {
             resetMaximizedSelectedImagePane(v);
             v.disposeView();
           }
@@ -233,32 +222,42 @@ public abstract class ImageViewerPlugin<E extends ImageElement> extends ViewerPl
    *
    * @return the layoutModel
    */
-  public synchronized GridBagLayoutModel getLayoutModel() {
-    return layoutModel;
+  public synchronized MigLayoutModel getLayoutModel() {
+    return cellManager.getLayoutModel();
   }
 
-  public GridBagLayoutModel getOriginalLayoutModel() {
+  /**
+   * Get the cell manager holding the mapping between layout cells and their components/views.
+   *
+   * @return the layout cell manager
+   */
+  public LayoutCellManager<E> getCellManager() {
+    return cellManager;
+  }
+
+  public MigLayoutModel getOriginalLayoutModel() {
     // Get the non clone layout from the list
-    Optional<ComboItemListener<GridBagLayoutModel>> layout = eventManager.getAction(ActionW.LAYOUT);
+    Optional<ComboItemListener<MigLayoutModel>> layout = eventManager.getAction(ActionW.LAYOUT);
     if (layout.isPresent()) {
+      MigLayoutModel currentLayout = cellManager.getLayoutModel();
       for (Object element : layout.get().getAllItem()) {
-        if (element instanceof GridBagLayoutModel gbm) {
-          if ((layoutModel.getIcon() != null && gbm.getIcon() == layoutModel.getIcon())
-              || layoutModel.toString().equals(gbm.toString())) {
+        if (element instanceof MigLayoutModel gbm) {
+          if ((currentLayout.getIcon() != null && gbm.getIcon() == currentLayout.getIcon())
+              || currentLayout.toString().equals(gbm.toString())) {
             return gbm;
           }
         }
       }
     }
-    return layoutModel;
+    return cellManager.getLayoutModel();
   }
 
-  public static GridBagLayoutModel buildGridBagLayoutModel(int rows, int cols, String type) {
+  public static MigLayoutModel buildMigLayoutModel(int rows, int cols, String type) {
     StringBuilder buf = new StringBuilder();
     buf.append(rows);
     buf.append("x"); // NON-NLS
     buf.append(cols);
-    return new GridBagLayoutModel(
+    return new MigLayoutModel(
         buf.toString(), String.format(ImageViewerPlugin.F_VIEWS, buf), rows, cols, type);
   }
 
@@ -275,14 +274,14 @@ public abstract class ImageViewerPlugin<E extends ImageElement> extends ViewerPl
 
   public static LayoutModel getLayoutModel(
       Map<String, Object> properties,
-      GridBagLayoutModel defaultModel,
-      ComboItemListener<GridBagLayoutModel> layoutAction) {
-    GridBagLayoutModel model = defaultModel;
+      MigLayoutModel defaultModel,
+      ComboItemListener<MigLayoutModel> layoutAction) {
+    MigLayoutModel model = defaultModel;
     String uid = null;
     if (properties != null) {
-      Object obj = properties.get(GridBagLayoutModel.class.getName());
-      if (obj instanceof GridBagLayoutModel gridBagLayoutModel) {
-        model = gridBagLayoutModel;
+      Object obj = properties.get(MigLayoutModel.class.getName());
+      if (obj instanceof MigLayoutModel currentLayout) {
+        model = currentLayout;
       } else {
         obj = properties.get(ViewCanvas.class.getName());
         if (obj instanceof Integer intVal && layoutAction != null) {
@@ -321,7 +320,7 @@ public abstract class ImageViewerPlugin<E extends ImageElement> extends ViewerPl
   @Override
   public void removeSeries(MediaSeries<E> series) {
     if (series != null) {
-      for (ViewCanvas<E> v : view2ds) {
+      for (ViewCanvas<E> v : cellManager) {
         if (v.getSeries() == series) {
           v.setSeries(null, null);
         }
@@ -341,7 +340,7 @@ public abstract class ImageViewerPlugin<E extends ImageElement> extends ViewerPl
   @Override
   public List<MediaSeries<E>> getOpenSeries() {
     List<MediaSeries<E>> list = new ArrayList<>();
-    for (ViewCanvas<E> v : view2ds) {
+    for (ViewCanvas<E> v : cellManager) {
       MediaSeries<E> s = v.getSeries();
       if (s != null) {
         list.add(s);
@@ -350,19 +349,18 @@ public abstract class ImageViewerPlugin<E extends ImageElement> extends ViewerPl
     return list;
   }
 
-  public void changeLayoutModel(GridBagLayoutModel layoutModel) {
+  public void changeLayoutModel(MigLayoutModel layoutModel) {
     eventManager
         .getAction(ActionW.LAYOUT)
         .ifPresent(itemListener -> itemListener.setSelectedItem(layoutModel));
   }
 
   protected void removeComponents() {
-    for (Component c : components) {
+    for (Component c : cellManager.getNonViewCanvasComponents()) {
       if (c instanceof SeriesViewerListener viewerListener) {
         eventManager.removeSeriesViewerListener(viewerListener);
       }
     }
-    components.clear();
   }
 
   protected JComponent buildInstance(Class<?> cl) throws Exception {
@@ -370,7 +368,7 @@ public abstract class ImageViewerPlugin<E extends ImageElement> extends ViewerPl
     if (hasSeriesViewerConstructor(cl)) {
       component = (JComponent) cl.getConstructor(SeriesViewer.class).newInstance(this);
     } else {
-      component = (JComponent) cl.newInstance();
+      component = (JComponent) cl.getDeclaredConstructor().newInstance();
     }
 
     if (component instanceof SeriesViewerListener viewerListener) {
@@ -393,139 +391,424 @@ public abstract class ImageViewerPlugin<E extends ImageElement> extends ViewerPl
    * Set a layout to this view panel. The layout is defined by the provided number corresponding the
    * layout definition in the property file.
    */
-  protected synchronized void setLayoutModel(GridBagLayoutModel layoutModel) {
-    this.layoutModel = layoutModel == null ? VIEWS_1x1.copy() : layoutModel.copy();
-    grid.removeAll();
-    // Keep views containing images
-    ArrayList<ViewCanvas<E>> oldViews = new ArrayList<>();
-    for (ViewCanvas<E> v : view2ds) {
-      if (v.getSeries() != null && v.getImage() != null) {
-        oldViews.add(v);
-      } else {
-        v.disposeView();
-      }
-    }
-    view2ds.clear();
+  protected synchronized void setLayoutModel(MigLayoutModel layoutModel) {
+    MigLayoutModel newLayout = layoutModel == null ? VIEWS_1x1.copy() : layoutModel.copy();
 
-    int nbview = getViewTypeNumber(layoutModel, view2dClass);
-    if (oldViews.size() > nbview) {
-      for (int i = oldViews.size() - 1; i >= nbview; i--) {
-        oldViews.remove(i).disposeView();
-      }
-    }
+    List<ViewCanvas<E>> preservedViews = preserveViewsWithImages(newLayout);
     removeComponents();
-    GraphicSelectionListener glistener = null;
-    final Map<LayoutConstraints, Component> elements = this.layoutModel.getConstraints();
-    for (LayoutConstraints e : elements.keySet()) {
-      boolean typeView2d = isViewType(view2dClass, e.type());
-      if (typeView2d) {
-        ViewCanvas<E> viewCanvas;
-        if (oldViews.isEmpty()) {
-          viewCanvas = createDefaultView(e.type());
-          if (viewCanvas != null) {
-            viewCanvas.registerDefaultListeners();
-          }
-        } else {
-          viewCanvas = oldViews.remove(0);
-        }
-        if (viewCanvas != null) {
-          view2ds.add(viewCanvas);
-          elements.put(e, viewCanvas.getJComponent());
-          grid.add(viewCanvas.getJComponent(), e);
-          if (viewCanvas.getSeries() != null) {
-            viewCanvas.getSeries().setOpen(true);
-          }
-        }
-      } else {
-        Component component = createComponent(e.type());
-        if (component != null) {
-          if (component instanceof JComponent jComponent) {
-            jComponent.setOpaque(true);
-          }
-          if (component instanceof HistogramView histogramView) {
-            glistener = histogramView;
-          }
-          components.add(component);
-          elements.put(e, component);
-          grid.add(component, e);
-        }
+
+    cellManager.setLayoutModel(newLayout);
+    grid.removeAll();
+    updateMigLayoutContraints(newLayout);
+
+    var graphicListener = populateGridWithComponents(newLayout, preservedViews);
+    configureViewsAndFireEvents(graphicListener);
+  }
+
+  /**
+   * Preserves views containing images, disposes empty ones, and adjusts count to layout capacity.
+   *
+   * @param newLayout the new layout model
+   * @return list of preserved ViewCanvas instances
+   */
+  private List<ViewCanvas<E>> preserveViewsWithImages(MigLayoutModel newLayout) {
+    List<ViewCanvas<E>> allCanvases = cellManager.getAllViewCanvases();
+
+    List<ViewCanvas<E>> viewsWithImages =
+        allCanvases.stream().filter(v -> v.getSeries() != null && v.getImage() != null).toList();
+
+    allCanvases.stream()
+        .filter(v -> v.getSeries() == null || v.getImage() == null)
+        .forEach(ViewCanvas::disposeView);
+
+    // Trim excess views if new layout has fewer slots
+    int layoutCapacity = getViewTypeNumber(newLayout, view2dClass);
+    if (viewsWithImages.size() > layoutCapacity) {
+      viewsWithImages
+          .subList(layoutCapacity, viewsWithImages.size())
+          .forEach(ViewCanvas::disposeView);
+      return new ArrayList<>(viewsWithImages.subList(0, layoutCapacity));
+    }
+
+    return new ArrayList<>(viewsWithImages);
+  }
+
+  /**
+   * Populates the grid with components based on the layout cells.
+   *
+   * @param layout the layout model
+   * @param preservedViews list of preserved ViewCanvas instances to reuse
+   * @return GraphicSelectionListener if a HistogramView was created, null otherwise
+   */
+  private GraphicSelectionListener populateGridWithComponents(
+      MigLayoutModel layout, List<ViewCanvas<E>> preservedViews) {
+    GraphicSelectionListener graphicListener = null;
+
+    for (MigCell cell : layout.getCells()) {
+      Component component = createComponentForCell(cell, preservedViews);
+
+      if (component instanceof HistogramView histogramView) {
+        graphicListener = histogramView;
+      }
+
+      if (component != null) {
+        grid.add(component, cell.getFullConstraints());
       }
     }
-    grid.revalidate();
 
-    if (!view2ds.isEmpty()) {
-      selectedImagePane = view2ds.get(0);
+    layout.applyConstraintsToLayout(grid);
+    return graphicListener;
+  }
 
-      MouseActions mouseActions = eventManager.getMouseActions();
-      boolean tiledMode = SynchData.Mode.TILE.equals(synchView.getSynchData().getMode());
-      for (int i = 0; i < view2ds.size(); i++) {
-        ViewCanvas<E> v = view2ds.get(i);
-        // Close lens because update does not work
-        v.closeLens();
-        if (tiledMode) {
-          v.setTileOffset(i);
-          v.setSeries(selectedImagePane.getSeries(), null);
-        }
-        v.enableMouseAndKeyListener(mouseActions);
-        if (glistener != null) {
-          v.getGraphicManager().addGraphicSelectionListener(glistener);
-        }
+  /**
+   * Creates a component for the given cell, either reusing a preserved view or creating new one.
+   *
+   * @param cell the layout cell
+   * @param preservedViews list of preserved ViewCanvas instances
+   * @return the created or reused component
+   */
+  private Component createComponentForCell(MigCell cell, List<ViewCanvas<E>> preservedViews) {
+    boolean isView2d = isViewType(view2dClass, cell.type());
+
+    if (isView2d) {
+      return createViewCanvasForCell(cell, preservedViews);
+    } else {
+      return createNonViewComponent(cell);
+    }
+  }
+
+  /** Creates or reuses a ViewCanvas for the given cell. */
+  private Component createViewCanvasForCell(MigCell cell, List<ViewCanvas<E>> preservedViews) {
+    ViewCanvas<E> viewCanvas =
+        preservedViews.isEmpty()
+            ? createFreshViewCanvas(cell.type())
+            : preservedViews.removeFirst();
+
+    if (viewCanvas != null) {
+      cellManager.addViewCanvas(cell.position(), viewCanvas);
+      if (viewCanvas.getSeries() != null) {
+        viewCanvas.getSeries().setOpen(true);
       }
-      selectedImagePane.setSelected(true);
-      eventManager.updateComponentsListener(selectedImagePane);
-      if (selectedImagePane.getSeries() instanceof Series) {
-        eventManager.fireSeriesViewerListeners(
-            new SeriesViewerEvent(
-                this, selectedImagePane.getSeries(), selectedImagePane.getImage(), EVENT.LAYOUT));
+      return viewCanvas.getJComponent();
+    }
+    return null;
+  }
+
+  /** Creates a fresh ViewCanvas with default listeners. */
+  private ViewCanvas<E> createFreshViewCanvas(String type) {
+    ViewCanvas<E> viewCanvas = createDefaultView(type);
+    if (viewCanvas != null) {
+      viewCanvas.registerDefaultListeners();
+    }
+    return viewCanvas;
+  }
+
+  /** Creates a non-ViewCanvas component for the given cell. */
+  private Component createNonViewComponent(MigCell cell) {
+    Component component = createComponent(cell.type());
+    if (component != null) {
+      if (component instanceof JComponent jComponent) {
+        jComponent.setOpaque(true);
+      }
+      cellManager.addComponent(cell.position(), component);
+    }
+    return component;
+  }
+
+  /**
+   * Configures all views with mouse listeners, tiled mode settings, and fires layout events.
+   *
+   * @param graphicListener optional GraphicSelectionListener to register with views
+   */
+  private void configureViewsAndFireEvents(GraphicSelectionListener graphicListener) {
+    List<ViewCanvas<E>> allViews = cellManager.getAllViewCanvases();
+    if (allViews.isEmpty()) {
+      return;
+    }
+
+    selectedImagePane = allViews.getFirst();
+    MouseActions mouseActions = eventManager.getMouseActions();
+    boolean tiledMode = SynchData.Mode.TILE.equals(synchView.getSynchData().getMode());
+
+    for (int i = 0; i < allViews.size(); i++) {
+      ViewCanvas<E> view = allViews.get(i);
+      configureView(view, i, tiledMode, mouseActions, graphicListener);
+    }
+
+    selectedImagePane.setSelected(true);
+    eventManager.updateComponentsListener(selectedImagePane);
+
+    if (selectedImagePane.getSeries() instanceof Series) {
+      eventManager.fireSeriesViewerListeners(
+          new SeriesViewerEvent(
+              this, selectedImagePane.getSeries(), selectedImagePane.getImage(), EVENT.LAYOUT));
+    }
+  }
+
+  /** Configures a single view with appropriate settings. */
+  private void configureView(
+      ViewCanvas<E> view,
+      int index,
+      boolean tiledMode,
+      MouseActions mouseActions,
+      GraphicSelectionListener graphicListener) {
+    view.closeLens(); // Close lens because update does not work
+
+    if (tiledMode) {
+      view.setTileOffset(index);
+      view.setSeries(selectedImagePane.getSeries(), null);
+    }
+
+    view.enableMouseAndKeyListener(mouseActions);
+
+    if (graphicListener != null) {
+      view.getGraphicManager().addGraphicSelectionListener(graphicListener);
+    }
+  }
+
+  public void replaceView(ViewCanvas<E> oldView, ViewCanvas<E> newView) {
+    if (oldView == null || newView == null) {
+      return;
+    }
+
+    int position = cellManager.findPositionOfViewCanvas(oldView);
+    if (position == -1) {
+      return; // Old view not found
+    }
+
+    performViewReplacement(oldView, newView, position);
+    updateViewsAfterReplacement();
+  }
+
+  /** Performs the actual view replacement operations. */
+  private void performViewReplacement(ViewCanvas<E> oldView, ViewCanvas<E> newView, int position) {
+    // Update selected pane reference if needed
+    if (selectedImagePane == oldView) {
+      selectedImagePane = newView;
+    }
+
+    // Dispose old view and replace in cell manager
+    oldView.disposeView();
+    cellManager.replaceViewCanvas(position, newView);
+
+    // Mark series as open
+    if (newView.getSeries() != null) {
+      newView.getSeries().setOpen(true);
+    }
+
+    // Rebuild grid layout
+    rebuildGridLayout();
+  }
+
+  /** Updates all views after replacement with proper configuration. */
+  private void updateViewsAfterReplacement() {
+    List<ViewCanvas<E>> allViews = cellManager.getAllViewCanvases();
+    if (allViews.isEmpty()) {
+      return;
+    }
+
+    ensureSelectedImagePane(allViews);
+
+    MouseActions mouseActions = eventManager.getMouseActions();
+    boolean tiledMode = SynchData.Mode.TILE.equals(synchView.getSynchData().getMode());
+
+    configureViewsAfterReplacement(allViews, tiledMode, mouseActions);
+
+    selectedImagePane.setSelected(true);
+    eventManager.updateComponentsListener(selectedImagePane);
+  }
+
+  /** Ensures selectedImagePane is valid. */
+  private void ensureSelectedImagePane(List<ViewCanvas<E>> allViews) {
+    if (selectedImagePane == null) {
+      selectedImagePane = allViews.getFirst();
+    }
+  }
+
+  /** Configures all views with appropriate settings after replacement. */
+  private void configureViewsAfterReplacement(
+      List<ViewCanvas<E>> allViews, boolean tiledMode, MouseActions mouseActions) {
+    for (int i = 0; i < allViews.size(); i++) {
+      ViewCanvas<E> view = allViews.get(i);
+      view.closeLens();
+
+      if (tiledMode) {
+        view.setTileOffset(i);
+        view.setSeries(selectedImagePane.getSeries(), null);
+      }
+
+      view.enableMouseAndKeyListener(mouseActions);
+    }
+  }
+
+  /**
+   * Rebuilds the grid layout by adding all components from the cellManager in their proper
+   * positions. This method efficiently updates the grid without recreating components.
+   */
+  private void rebuildGridLayout() {
+    grid.removeAll();
+
+    MigLayoutModel currentLayout = cellManager.getLayoutModel();
+    updateMigLayoutContraints(currentLayout);
+
+    // Iterate through cells and add components from cellManager
+    for (MigCell cell : currentLayout.getCells()) {
+      Component component = cellManager.getComponent(cell.position());
+      if (component != null) {
+        grid.add(component, cell.getFullConstraints());
+      }
+    }
+
+    grid.revalidate();
+  }
+
+  public void resetMaximizedSelectedImagePane(ViewCanvas<E> viewCanvas) {
+    if (grid.getComponentCount() == 1) {
+      Dialog fullscreenDialog = WinUtil.getParentDialog(grid);
+      if (fullscreenDialog != null
+          && fullscreenDialog
+              .getTitle()
+              .equals(Messages.getString("ImageViewerPlugin.fullscreen"))) {
+        maximizedSelectedImagePane(viewCanvas, null);
       }
     }
   }
 
-  public void replaceView(ViewCanvas<E> oldView2d, ViewCanvas<E> newView2d) {
-    if (oldView2d != null && newView2d != null) {
-      grid.removeAll();
-      final Map<LayoutConstraints, Component> elements = this.layoutModel.getConstraints();
-      for (Entry<LayoutConstraints, Component> element : elements.entrySet()) {
-        if (element.getValue() == oldView2d.getJComponent()) {
-          if (selectedImagePane == oldView2d) {
-            selectedImagePane = newView2d;
-          }
-          oldView2d.disposeView();
-          int index = view2ds.indexOf(oldView2d);
-          if (index >= 0) {
-            view2ds.set(index, newView2d);
-          }
-          elements.put(element.getKey(), newView2d.getJComponent());
-          grid.add(newView2d.getJComponent(), element.getKey());
-          if (newView2d.getSeries() != null) {
-            newView2d.getSeries().setOpen(true);
-          }
-        } else {
-          grid.add(element.getValue(), element.getKey());
-        }
-      }
-      grid.revalidate();
+  public void maximizedSelectedImagePane(ViewCanvas<E> defaultView2d, MouseEvent evt) {
+    if (shouldPreventMaximization(defaultView2d, evt)) {
+      return;
+    }
 
-      if (!view2ds.isEmpty()) {
-        if (selectedImagePane == null) {
-          selectedImagePane = view2ds.getFirst();
-        }
-        MouseActions mouseActions = eventManager.getMouseActions();
-        boolean tiledMode = SynchData.Mode.TILE.equals(synchView.getSynchData().getMode());
-        for (int i = 0; i < view2ds.size(); i++) {
-          ViewCanvas<E> v = view2ds.get(i);
-          // Close lens because update does not work
-          v.closeLens();
-          if (tiledMode) {
-            v.setTileOffset(i);
-            v.setSeries(selectedImagePane.getSeries(), null);
+    removeFocusListenersFromViews();
+
+    String titleDialog = Messages.getString("ImageViewerPlugin.fullscreen");
+    Dialog fullscreenDialog = WinUtil.getParentDialog(grid);
+    boolean isDetached =
+        fullscreenDialog != null && !titleDialog.equals(fullscreenDialog.getTitle());
+
+    grid.removeAll();
+
+    if (isDetached || fullscreenDialog == null) {
+      enterFullscreenMode(defaultView2d, titleDialog, fullscreenDialog, isDetached);
+    } else {
+      exitFullscreenMode(defaultView2d, fullscreenDialog);
+    }
+  }
+
+  /**
+   * Checks if maximization should be prevented due to incomplete graphics or graphic intersection.
+   */
+  private boolean shouldPreventMaximization(ViewCanvas<E> viewCanvas, MouseEvent evt) {
+    List<DragGraphic> selectedGraphics =
+        viewCanvas.getGraphicManager().getSelectedDraggableGraphics();
+
+    // Prevent if any graphics are incomplete
+    if (selectedGraphics.stream()
+        .anyMatch(g -> Objects.equals(g.getPtsNumber(), Graphic.UNDEFINED))) {
+      return true;
+    }
+
+    // Prevent if click intersects with a graphic
+    if (evt != null) {
+      MouseEventDouble mouseEvt = new MouseEventDouble(evt);
+      mouseEvt.setImageCoordinates(viewCanvas.getImageCoordinatesFromMouse(evt.getX(), evt.getY()));
+      return viewCanvas.getGraphicManager().getFirstGraphicIntersecting(mouseEvt).isPresent();
+    }
+
+    return false;
+  }
+
+  /** Removes focus listeners from all views. */
+  private void removeFocusListenersFromViews() {
+    cellManager.getAllViewCanvases().forEach(v -> v.getJComponent().removeFocusListener(v));
+  }
+
+  /** Adds focus listeners back to all views. */
+  private void addFocusListenersToViews() {
+    cellManager.getAllViewCanvases().forEach(v -> v.getJComponent().addFocusListener(v));
+  }
+
+  /** Enters fullscreen mode by creating a modal dialog with the view. */
+  private void enterFullscreenMode(
+      ViewCanvas<E> viewCanvas, String title, Dialog existingDialog, boolean isDetached) {
+    remove(grid);
+
+    // Configure grid for single fullscreen view
+    grid.setLayout(new net.miginfocom.swing.MigLayout("fill, ins 0", "[grow,fill]", "[grow,fill]"));
+    grid.add(viewCanvas.getJComponent(), "grow");
+    viewCanvas.getJComponent().addFocusListener(viewCanvas);
+
+    // Create and configure fullscreen dialog
+    Frame parentFrame = WinUtil.getParentFrame(this);
+    Dialog fullscreenDialog =
+        new JDialog(
+            isDetached ? existingDialog : parentFrame, title, ModalityType.APPLICATION_MODAL);
+
+    fullscreenDialog.add(grid, BorderLayout.CENTER);
+    fullscreenDialog.addWindowListener(
+        new WindowAdapter() {
+          @Override
+          public void windowClosing(WindowEvent e) {
+            maximizedSelectedImagePane(viewCanvas, null);
           }
-          v.enableMouseAndKeyListener(mouseActions);
-        }
-        selectedImagePane.setSelected(true);
-        eventManager.updateComponentsListener(selectedImagePane);
+        });
+
+    configureDialogBounds(fullscreenDialog, parentFrame, existingDialog, isDetached);
+  }
+
+  /** Configures dialog bounds based on parent frame state and monitor configuration. */
+  private void configureDialogBounds(
+      Dialog dialog, Frame parentFrame, Dialog existingDialog, boolean isDetached) {
+    if (!isDetached
+        && (parentFrame.getExtendedState() & Frame.MAXIMIZED_BOTH) == Frame.MAXIMIZED_BOTH) {
+      dialog.setBounds(parentFrame.getBounds());
+      dialog.setVisible(true);
+    } else {
+      Monitor monitor =
+          Monitor.getMonitor(
+              isDetached
+                  ? existingDialog.getGraphicsConfiguration()
+                  : parentFrame.getGraphicsConfiguration());
+      if (monitor != null) {
+        dialog.setBounds(monitor.getFullscreenBounds());
+        dialog.setVisible(true);
       }
     }
+  }
+
+  /** Exits fullscreen mode by restoring the original grid layout. */
+  private void exitFullscreenMode(ViewCanvas<E> viewCanvas, Dialog fullscreenDialog) {
+    rebuildGridLayout();
+    addFocusListenersToViews();
+
+    fullscreenDialog.removeAll();
+    fullscreenDialog.dispose();
+
+    add(grid, BorderLayout.CENTER);
+    viewCanvas.getJComponent().requestFocusInWindow();
+  }
+
+  private void updateMigLayoutContraints(MigLayoutModel layoutModel) {
+    migLayout.setLayoutConstraints(layoutModel.getLayoutConstraints());
+    migLayout.setColumnConstraints(layoutModel.getColumnConstraints());
+    migLayout.setRowConstraints(layoutModel.getRowConstraints());
+  }
+
+  public static int getViewTypeNumber(MigLayoutModel layout) {
+    int val = 0;
+    if (layout != null) {
+      for (MigCell cell : layout.getCells()) {
+        try {
+          Class<?> clazz = Class.forName(cell.type());
+          if (view2dClass.isAssignableFrom(clazz)) {
+            val++;
+          }
+        } catch (Exception e) {
+          // Ignore exceptions and continue counting
+        }
+      }
+    }
+    return val;
   }
 
   public void setSelectedImagePaneFromFocus(ViewCanvas<E> viewCanvas) {
@@ -537,6 +820,7 @@ public abstract class ImageViewerPlugin<E extends ImageElement> extends ViewerPl
       this.selectedImagePane.getSeries().setSelected(false, null);
       this.selectedImagePane.getSeries().setFocused(false);
     }
+
     if (viewCanvas != null && viewCanvas.getSeries() != null) {
       viewCanvas.getSeries().setSelected(true, viewCanvas.getImage());
       viewCanvas.getSeries().setFocused(eventManager.getSelectedView2dContainer() == this);
@@ -561,115 +845,11 @@ public abstract class ImageViewerPlugin<E extends ImageElement> extends ViewerPl
             this, viewCanvas == null ? null : viewCanvas.getSeries(), null, EVENT.SELECT_VIEW));
   }
 
-  public void resetMaximizedSelectedImagePane(final ViewCanvas<E> viewCanvas) {
-    if (grid.getComponentCount() == 1) {
-      Dialog fullscreenDialog = WinUtil.getParentDialog(grid);
-      if (fullscreenDialog != null
-          && fullscreenDialog
-              .getTitle()
-              .equals(Messages.getString("ImageViewerPlugin.fullscreen"))) {
-        maximizedSelectedImagePane(viewCanvas, null);
-      }
-    }
-  }
-
-  public void maximizedSelectedImagePane(final ViewCanvas<E> defaultView2d, MouseEvent evt) {
-    final Map<LayoutConstraints, Component> elements = layoutModel.getConstraints();
-    // Prevent conflict with double click for stopping to draw a graphic (like polyline)
-
-    List<DragGraphic> selGraphics =
-        defaultView2d.getGraphicManager().getSelectedDraggableGraphics();
-
-    // Check if there is at least one graphic not complete (numer of pts == UNDEFINED)
-    if (selGraphics.stream().anyMatch(g -> Objects.equals(g.getPtsNumber(), Graphic.UNDEFINED))) {
-      return;
-    }
-
-    if (evt != null) {
-      // Do not maximize when click hits a graphic
-      MouseEventDouble mouseEvt = new MouseEventDouble(evt);
-      mouseEvt.setImageCoordinates(
-          defaultView2d.getImageCoordinatesFromMouse(evt.getX(), evt.getY()));
-
-      if (defaultView2d.getGraphicManager().getFirstGraphicIntersecting(mouseEvt).isPresent()) {
-        return;
-      }
-    }
-
-    for (ViewCanvas<E> v : view2ds) {
-      v.getJComponent().removeFocusListener(v);
-    }
-
-    String titleDialog = Messages.getString("ImageViewerPlugin.fullscreen");
-    Dialog fullscreenDialog = WinUtil.getParentDialog(grid);
-    // Handle the case when the dialog is a detached window and not the fullscreen window.
-    final boolean detachedWindow =
-        fullscreenDialog != null && !titleDialog.equals(fullscreenDialog.getTitle());
-
-    grid.removeAll();
-    if (detachedWindow || fullscreenDialog == null) {
-      remove(grid);
-      for (Entry<LayoutConstraints, Component> entry : elements.entrySet()) {
-        if (entry.getValue().equals(defaultView2d.getJComponent())) {
-          GridBagConstraints c = entry.getKey().copy();
-          c.weightx = 1.0;
-          c.weighty = 1.0;
-          grid.add(defaultView2d.getJComponent(), c);
-          defaultView2d.getJComponent().addFocusListener(defaultView2d);
-          break;
-        }
-      }
-      Dialog oldDialog = fullscreenDialog;
-      Frame frame = WinUtil.getParentFrame(this);
-      fullscreenDialog =
-          new JDialog(
-              detachedWindow ? oldDialog : frame, titleDialog, ModalityType.APPLICATION_MODAL);
-      fullscreenDialog.add(grid, BorderLayout.CENTER);
-      fullscreenDialog.addWindowListener(
-          new WindowAdapter() {
-
-            @Override
-            public void windowClosing(WindowEvent e) {
-              maximizedSelectedImagePane(defaultView2d, null);
-            }
-          });
-
-      if (!detachedWindow
-          && (frame.getExtendedState() & Frame.MAXIMIZED_BOTH) == Frame.MAXIMIZED_BOTH) {
-        fullscreenDialog.setBounds(frame.getBounds());
-        fullscreenDialog.setVisible(true);
-      } else {
-        Monitor monitor =
-            Monitor.getMonitor(
-                detachedWindow
-                    ? oldDialog.getGraphicsConfiguration()
-                    : frame.getGraphicsConfiguration());
-        if (monitor != null) {
-          fullscreenDialog.setBounds(monitor.getFullscreenBounds());
-          fullscreenDialog.setVisible(true);
-        }
-      }
-
-    } else {
-      for (Entry<LayoutConstraints, Component> entry : elements.entrySet()) {
-        grid.add(entry.getValue(), entry.getKey());
-      }
-      for (ViewCanvas<E> v : view2ds) {
-        v.getJComponent().addFocusListener(v);
-      }
-
-      fullscreenDialog.removeAll();
-      fullscreenDialog.dispose();
-      add(grid, BorderLayout.CENTER);
-
-      defaultView2d.getJComponent().requestFocusInWindow();
-    }
-  }
-
   /** Return the image in the image display panel. */
   public E getImage(int i) {
-    if (i >= 0 && i < view2ds.size()) {
-      return view2ds.get(i).getImage();
+    ViewCanvas<E> viewCanvas = cellManager.getViewCanvasByIndex(i);
+    if (viewCanvas != null) {
+      return viewCanvas.getImage();
     }
     return null;
   }
@@ -680,7 +860,7 @@ public abstract class ImageViewerPlugin<E extends ImageElement> extends ViewerPl
   }
 
   public List<ViewCanvas<E>> getImagePanels(boolean selectedImagePaneLast) {
-    List<ViewCanvas<E>> viewList = new ArrayList<>(view2ds);
+    List<ViewCanvas<E>> viewList = new ArrayList<>(cellManager.getAllViewCanvases());
     if (selectedImagePaneLast) {
       ViewCanvas<E> selectedView = getSelectedImagePane();
 
@@ -694,9 +874,10 @@ public abstract class ImageViewerPlugin<E extends ImageElement> extends ViewerPl
   }
 
   public ViewCanvas<E> getNextSelectedImagePane() {
-    for (int i = 0; i < view2ds.size() - 1; i++) {
-      if (view2ds.get(i) == selectedImagePane) {
-        return view2ds.get(i + 1);
+    List<ViewCanvas<E>> allViews = cellManager.getAllViewCanvases();
+    for (int i = 0; i < allViews.size() - 1; i++) {
+      if (allViews.get(i) == selectedImagePane) {
+        return allViews.get(i + 1);
       }
     }
     return selectedImagePane;
@@ -704,13 +885,13 @@ public abstract class ImageViewerPlugin<E extends ImageElement> extends ViewerPl
 
   public abstract List<SynchView> getSynchList();
 
-  public abstract List<GridBagLayoutModel> getLayoutList();
+  public abstract List<MigLayoutModel> getLayoutList();
 
   public Boolean isContainingView(ViewCanvas<?> view2DPane) {
-    return view2ds.stream()
+    return cellManager.getAllViewCanvases().stream()
         .filter(v -> Objects.equals(v, view2DPane))
         .findFirst()
-        .map(v -> Boolean.TRUE)
+        .map(_ -> Boolean.TRUE)
         .orElse(Boolean.FALSE);
   }
 
@@ -725,207 +906,260 @@ public abstract class ImageViewerPlugin<E extends ImageElement> extends ViewerPl
   }
 
   public void updateTileOffset() {
-    if (SynchData.Mode.TILE.equals(synchView.getSynchData().getMode())
-        && selectedImagePane != null) {
-      MediaSeries<E> series = null;
-      ViewCanvas<E> selectedView = selectedImagePane;
-      if (selectedImagePane.getSeries() != null) {
-        series = selectedImagePane.getSeries();
-      } else {
-        for (ViewCanvas<E> v : view2ds) {
-          if (v.getSeries() != null) {
-            series = v.getSeries();
-            selectedView = v;
-            break;
-          }
-        }
-      }
-      if (series != null) {
-        @SuppressWarnings("unchecked")
-        int limit =
-            series.size((Filter<E>) selectedView.getActionValue(ActionW.FILTERED_SERIES.cmd()));
-        for (int i = 0; i < view2ds.size(); i++) {
-          ViewCanvas<E> v = view2ds.get(i);
-          if (i < limit) {
-            v.setTileOffset(i);
-            v.setSeries(series, null);
-          } else {
-            v.setSeries(null, null);
-          }
-        }
-      }
+    boolean isTileMode = SynchData.Mode.TILE.equals(synchView.getSynchData().getMode());
+
+    if (isTileMode && selectedImagePane != null) {
+      updateTileModeLayout();
     } else {
-      for (ViewCanvas<E> v : view2ds) {
-        v.setTileOffset(0);
+      resetTileOffsets();
+    }
+  }
+
+  /** Updates layout in tile mode by distributing series across views. */
+  private void updateTileModeLayout() {
+    MediaSeries<E> series = findAvailableSeries();
+    if (series == null) {
+      return;
+    }
+
+    ViewCanvas<E> selectedView = findViewWithSeries(series);
+    int seriesLimit = calculateSeriesLimit(series, selectedView);
+    distributeSeriesAcrossViews(series, seriesLimit);
+  }
+
+  /** Finds an available series from selectedImagePane or other views. */
+  private MediaSeries<E> findAvailableSeries() {
+    if (selectedImagePane.getSeries() != null) {
+      return selectedImagePane.getSeries();
+    }
+
+    return cellManager.getAllViewCanvases().stream()
+        .map(ViewCanvas::getSeries)
+        .filter(Objects::nonNull)
+        .findFirst()
+        .orElse(null);
+  }
+
+  /** Finds the view containing the given series. */
+  private ViewCanvas<E> findViewWithSeries(MediaSeries<E> series) {
+    return cellManager.getAllViewCanvases().stream()
+        .filter(v -> v.getSeries() == series)
+        .findFirst()
+        .orElse(selectedImagePane);
+  }
+
+  /** Calculates the series limit based on filtered series size. */
+  @SuppressWarnings("unchecked")
+  private int calculateSeriesLimit(MediaSeries<E> series, ViewCanvas<E> view) {
+    return series.size((Filter<E>) view.getActionValue(ActionW.FILTERED_SERIES.cmd()));
+  }
+
+  /** Distributes series across views up to the specified limit. */
+  private void distributeSeriesAcrossViews(MediaSeries<E> series, int limit) {
+    List<ViewCanvas<E>> allViews = cellManager.getAllViewCanvases();
+    for (int i = 0; i < allViews.size(); i++) {
+      ViewCanvas<E> view = allViews.get(i);
+      if (i < limit) {
+        view.setTileOffset(i);
+        view.setSeries(series, null);
+      } else {
+        view.setSeries(null, null);
       }
     }
   }
 
+  /** Resets tile offsets to 0 for all views. */
+  private void resetTileOffsets() {
+    cellManager.getAllViewCanvases().forEach(v -> v.setTileOffset(0));
+  }
+
   public synchronized void setMouseActions(MouseActions mouseActions) {
     if (mouseActions == null) {
-      for (ViewCanvas<E> v : view2ds) {
+      for (ViewCanvas<E> v : cellManager) {
         v.disableMouseAndKeyListener();
         // Let the possibility get the focus
         v.iniDefaultMouseListener();
       }
     } else {
-      for (ViewCanvas<E> v : view2ds) {
+      for (ViewCanvas<E> v : cellManager) {
         v.enableMouseAndKeyListener(mouseActions);
       }
     }
   }
 
-  public GridBagLayoutModel getBestDefaultViewLayout(int size) {
+  public MigLayoutModel getBestDefaultViewLayout(int size) {
     if (size <= 1) {
       return getDefaultLayoutModel();
     }
-    Optional<ComboItemListener<GridBagLayoutModel>> layout = eventManager.getAction(ActionW.LAYOUT);
-    if (layout.isPresent()) {
-      Object[] list = layout.get().getAllItem();
-      GridBagLayoutModel bestModel = getDefaultLayoutModel();
-      int diff = Integer.MAX_VALUE;
-      int diffLayout = Integer.MAX_VALUE;
-      for (Object m : list) {
-        if (m instanceof GridBagLayoutModel model) {
-          int layoutSize = getViewTypeNumber(model, getSeriesViewerClass());
-          int layoutDiff = Math.abs(layoutSize - size);
-          if (layoutSize >= size && layoutDiff <= diff) {
-            if (layoutDiff == diff) {
+
+    return eventManager
+        .getAction(ActionW.LAYOUT)
+        .map(layout -> findBestLayoutForSize(layout.getAllItem(), size))
+        .orElse(getDefaultLayoutModel());
+  }
+
+  /** Finds the best layout model for the specified size from available layouts. */
+  private MigLayoutModel findBestLayoutForSize(Object[] layouts, int targetSize) {
+    record LayoutCandidate(MigLayoutModel model, int sizeDiff, int dimensionDiff) {}
+
+    return java.util.Arrays.stream(layouts)
+        .filter(MigLayoutModel.class::isInstance)
+        .map(MigLayoutModel.class::cast)
+        .map(
+            model -> {
+              int layoutSize = getViewTypeNumber(model, getSeriesViewerClass());
+              int sizeDiff = Math.abs(layoutSize - targetSize);
               Dimension dim = model.getGridSize();
-              if (Math.abs(dim.width - dim.height) < diffLayout) {
-                diffLayout = Math.abs(dim.width - dim.height);
-              } else {
-                continue;
-              }
-            }
-            diff = layoutDiff;
-            bestModel = model;
-          }
-        }
-      }
-      return bestModel;
-    }
-
-    return getDefaultLayoutModel();
+              int dimensionDiff = Math.abs(dim.width - dim.height);
+              return new LayoutCandidate(model, sizeDiff, dimensionDiff);
+            })
+        .filter(
+            candidate -> {
+              int layoutSize = getViewTypeNumber(candidate.model, getSeriesViewerClass());
+              return layoutSize >= targetSize;
+            })
+        .min(
+            Comparator.comparingInt(LayoutCandidate::sizeDiff)
+                .thenComparingInt(LayoutCandidate::dimensionDiff))
+        .map(LayoutCandidate::model)
+        .orElse(getDefaultLayoutModel());
   }
 
-  protected static ArrayList<GridBagLayoutModel> getLayoutList(
-      ImageViewerPlugin<?> viewerPlugin, List<GridBagLayoutModel> bagLayoutModels) {
-    int rx = 1;
-    int ry = 1;
-    int width = viewerPlugin.getWidth();
-    int height = viewerPlugin.getHeight();
-    double ratio = width / (double) height;
-    if (ratio >= 1.0) {
-      rx = (int) Math.round(ratio * 1.5);
-    } else {
-      ry = (int) Math.round((1.0 / ratio) * 1.5);
-    }
-
-    ArrayList<GridBagLayoutModel> list = new ArrayList<>(bagLayoutModels);
-    int rxMin = rx;
-    int ryMin = ry;
-    for (GridBagLayoutModel model : bagLayoutModels) {
-      Dimension dim = model.getGridSize();
-      if (dim.width > rxMin) {
-        rxMin = dim.width;
-      }
-      if (dim.height > ryMin) {
-        ryMin = dim.height;
-      }
-    }
-
-    // Exclude 1x1
-    if (rx != ry && rx != 0 && ry != 0) {
-      int factorLimit = (int) (rx == 1 ? Math.round(width / 512.0) : Math.round(height / 512.0));
-      if (factorLimit < 1) {
-        factorLimit = 1;
-      }
-      if (rx > ry) {
-        int step = 1 + (rx / 20);
-        for (int i = rx / 2; i < rx; i = i + step) {
-          addLayout(list, factorLimit, i, ry, rxMin, ryMin);
-        }
-      } else {
-        int step = 1 + (ry / 20);
-        for (int i = ry / 2; i < ry; i = i + step) {
-          addLayout(list, factorLimit, rx, i, rxMin, ryMin);
-        }
-      }
-      addLayout(list, factorLimit, rx, ry, rxMin, ryMin);
-    }
-    list.sort(Comparator.comparingInt(o -> o.getConstraints().size()));
-    return list;
-  }
-
-  private static void addLayout(
-      List<GridBagLayoutModel> list, int factorLimit, int rx, int ry, int rxMin, int ryMin) {
-    for (int i = 1; i <= factorLimit; i++) {
-      if (i > 2 || i * ry > ryMin || i * rx > rxMin) {
-        if (i * ry < 50 && i * rx < 50) {
-          list.add(
-              ImageViewerPlugin.buildGridBagLayoutModel(i * ry, i * rx, view2dClass.getName()));
-        }
-      }
-    }
-  }
-
-  public static GridBagLayoutModel getBestDefaultViewLayout(
-      ActionState layout, int size, GridBagLayoutModel defaultModel) {
+  public static MigLayoutModel getBestDefaultViewLayout(
+      ActionState layout, int size, MigLayoutModel defaultModel) {
     if (size <= 1) {
       return defaultModel;
     }
+
     if (layout instanceof ComboItemListener<?> comboItemListener) {
-      Object[] list = comboItemListener.getAllItem();
-      GridBagLayoutModel bestModel = defaultModel;
-      int diffNumber = Integer.MAX_VALUE;
-      int diffLayout = Integer.MAX_VALUE;
-      for (Object m : list) {
-        if (m instanceof GridBagLayoutModel model) {
-          int layoutSize = getViewTypeNumber(model);
-          int dn = Math.abs(layoutSize - size);
-          if (layoutSize >= size && dn <= diffNumber) {
-            Dimension dim = model.getGridSize();
-            if (dn == diffNumber) {
-              int dwh = Math.abs(dim.width - dim.height);
-              if (dwh < diffLayout) {
-                diffLayout = dwh;
-              } else if (dwh == diffLayout && dim.width > dim.height) {
-                diffLayout = dwh;
-              } else {
-                continue;
-              }
-            }
-            diffNumber = dn;
-            bestModel = model;
-          }
-        }
-      }
-      return bestModel;
+      return findBestStaticLayoutForSize(comboItemListener.getAllItem(), size, defaultModel);
     }
     return defaultModel;
   }
 
-  public static int getViewTypeNumber(GridBagLayoutModel layout) {
-    int val = 0;
-    if (layout != null) {
-      for (LayoutConstraints layoutConstraints : layout.getConstraints().keySet()) {
-        if (layoutConstraints.color() == null) {
-          val++;
+  /** Static version of findBestLayoutForSize for use in static context. */
+  private static MigLayoutModel findBestStaticLayoutForSize(
+      Object[] layouts, int targetSize, MigLayoutModel defaultModel) {
+    record LayoutCandidate(
+        MigLayoutModel model,
+        int sizeDiff,
+        int dimensionDiff,
+        boolean landscape,
+        boolean hasComponent) {}
+
+    return java.util.Arrays.stream(layouts)
+        .filter(MigLayoutModel.class::isInstance)
+        .map(MigLayoutModel.class::cast)
+        .map(
+            model -> {
+              int layoutSize = getViewTypeNumber(model);
+              int sizeDiff = Math.abs(layoutSize - targetSize);
+              boolean hasComponent = model.getCellCount() > layoutSize;
+              Dimension dim = model.getGridSize();
+              int dimensionDiff = Math.abs(dim.width - dim.height);
+              boolean landscape = dim.width > dim.height;
+              return new LayoutCandidate(model, sizeDiff, dimensionDiff, landscape, hasComponent);
+            })
+        .filter(
+            candidate -> {
+              int layoutSize = getViewTypeNumber(candidate.model);
+              return layoutSize >= targetSize && !candidate.hasComponent;
+            })
+        .min(
+            Comparator.comparingInt(LayoutCandidate::sizeDiff)
+                .thenComparingInt(LayoutCandidate::dimensionDiff)
+                .thenComparing(LayoutCandidate::landscape))
+        .map(LayoutCandidate::model)
+        .orElse(defaultModel);
+  }
+
+  /** Generates a list of layout models based on viewer dimensions and base models. */
+  protected static ArrayList<MigLayoutModel> getLayoutList(
+      ImageViewerPlugin<?> viewerPlugin, List<MigLayoutModel> baseLayoutModels) {
+    LayoutDimensions dims = calculateLayoutDimensions(viewerPlugin, baseLayoutModels);
+    ArrayList<MigLayoutModel> layouts = new ArrayList<>(baseLayoutModels);
+
+    // Exclude 1x1 when generating dynamic layouts
+    if (dims.shouldGenerateDynamicLayouts()) {
+      generateDynamicLayouts(layouts, dims);
+    }
+
+    layouts.sort(Comparator.comparingInt(MigLayoutModel::getCellCount));
+    return layouts;
+  }
+
+  /** Calculates layout dimensions based on viewer aspect ratio. */
+  private static LayoutDimensions calculateLayoutDimensions(
+      ImageViewerPlugin<?> viewerPlugin, List<MigLayoutModel> baseModels) {
+    int width = viewerPlugin.getWidth();
+    int height = viewerPlugin.getHeight();
+    double ratio = width / (double) height;
+
+    int cols = ratio >= 1.0 ? (int) Math.round(ratio * 1.5) : 1;
+    int rows = ratio < 1.0 ? (int) Math.round((1.0 / ratio) * 1.5) : 1;
+
+    // Calculate minimum dimensions from existing models
+    int minCols = cols;
+    int minRows = rows;
+    for (MigLayoutModel model : baseModels) {
+      Dimension dim = model.getGridSize();
+      minCols = Math.max(minCols, dim.width);
+      minRows = Math.max(minRows, dim.height);
+    }
+
+    int factorLimit =
+        cols == 1 ? (int) Math.round(width / 512.0) : (int) Math.round(height / 512.0);
+    factorLimit = Math.max(1, factorLimit);
+
+    return new LayoutDimensions(cols, rows, minCols, minRows, factorLimit);
+  }
+
+  /** Generates dynamic layout models based on calculated dimensions. */
+  private static void generateDynamicLayouts(
+      ArrayList<MigLayoutModel> layouts, LayoutDimensions dims) {
+    if (dims.cols > dims.rows) {
+      int step = 1 + (dims.cols / 20);
+      for (int i = dims.cols / 2; i < dims.cols; i += step) {
+        addDynamicLayout(layouts, dims.factorLimit, i, dims.rows, dims.minCols, dims.minRows);
+      }
+    } else {
+      int step = 1 + (dims.rows / 20);
+      for (int i = dims.rows / 2; i < dims.rows; i += step) {
+        addDynamicLayout(layouts, dims.factorLimit, dims.cols, i, dims.minCols, dims.minRows);
+      }
+    }
+    addDynamicLayout(layouts, dims.factorLimit, dims.cols, dims.rows, dims.minCols, dims.minRows);
+  }
+
+  /** Adds dynamic layout variations based on factor scaling. */
+  private static void addDynamicLayout(
+      List<MigLayoutModel> layouts, int factorLimit, int cols, int rows, int minCols, int minRows) {
+    for (int factor = 1; factor <= factorLimit; factor++) {
+      if (factor > 2 || factor * rows > minRows || factor * cols > minCols) {
+        int scaledRows = factor * rows;
+        int scaledCols = factor * cols;
+        if (scaledRows < 50 && scaledCols < 50) {
+          layouts.add(buildMigLayoutModel(scaledRows, scaledCols, view2dClass.getName()));
         }
       }
     }
-    return val;
   }
 
-  public GridBagLayoutModel getViewLayout(String title) {
+  /** Helper record for layout dimension calculations. */
+  private record LayoutDimensions(int cols, int rows, int minCols, int minRows, int factorLimit) {
+
+    boolean shouldGenerateDynamicLayouts() {
+      return cols != rows && cols != 0 && rows != 0;
+    }
+  }
+
+  public MigLayoutModel getViewLayout(String title) {
     if (title != null) {
-      Optional<ComboItemListener<GridBagLayoutModel>> layout =
-          eventManager.getAction(ActionW.LAYOUT);
+      Optional<ComboItemListener<MigLayoutModel>> layout = eventManager.getAction(ActionW.LAYOUT);
       if (layout.isPresent()) {
         Object[] list = layout.get().getAllItem();
         for (Object m : list) {
-          if (m instanceof GridBagLayoutModel model && title.equals(model.getId())) {
+          if (m instanceof MigLayoutModel model && title.equals(model.getId())) {
             return model;
           }
         }
@@ -935,280 +1169,81 @@ public abstract class ImageViewerPlugin<E extends ImageElement> extends ViewerPl
   }
 
   public void addSeriesList(List<MediaSeries<E>> seriesList, boolean bestDefaultLayout) {
-    if (seriesList != null && !seriesList.isEmpty()) {
-      if (SynchData.Mode.TILE.equals(synchView.getSynchData().getMode())) {
-        addSeries(seriesList.getFirst());
-        return;
-      }
-      setSelectedAndGetFocus();
-      if (bestDefaultLayout) {
-        changeLayoutModel(getBestDefaultViewLayout(seriesList.size()));
+    if (seriesList == null || seriesList.isEmpty()) {
+      return;
+    }
 
-        // If the layout is larger than the list of series, clean other views.
-        if (view2ds.size() > seriesList.size()) {
-          setSelectedImagePane(view2ds.get(seriesList.size()));
-          for (int i = seriesList.size(); i < view2ds.size(); i++) {
-            ViewCanvas<E> viewPane = getSelectedImagePane();
-            if (viewPane != null) {
-              viewPane.setSeries(null, null);
-            }
-            getNextSelectedImagePane();
-          }
-        }
-        if (!view2ds.isEmpty()) {
-          setSelectedImagePane(view2ds.getFirst());
-        }
-        for (MediaSeries mediaSeries : seriesList) {
-          addSeries(mediaSeries);
-        }
-      } else {
-        int emptyView = 0;
-        for (ViewCanvas<E> v : view2ds) {
-          if (v.getSeries() == null) {
-            emptyView++;
-          }
-        }
-        if (emptyView < seriesList.size()) {
-          changeLayoutModel(getBestDefaultViewLayout(view2ds.size() + seriesList.size()));
-        }
-        int index = 0;
-        for (ViewCanvas<E> v : view2ds) {
-          if (v.getSeries() == null && index < seriesList.size()) {
-            setSelectedImagePane(v);
-            addSeries(seriesList.get(index));
-            index++;
-          }
-        }
-      }
-      repaint();
+    if (SynchData.Mode.TILE.equals(synchView.getSynchData().getMode())) {
+      addSeries(seriesList.getFirst());
+      return;
+    }
+
+    setSelectedAndGetFocus();
+
+    if (bestDefaultLayout) {
+      addSeriesWithBestLayout(seriesList);
+    } else {
+      addSeriesToAvailableSlots(seriesList);
+    }
+
+    repaint();
+  }
+
+  /** Adds series with best fitting layout, adjusting grid size as needed. */
+  private void addSeriesWithBestLayout(List<MediaSeries<E>> seriesList) {
+    changeLayoutModel(getBestDefaultViewLayout(seriesList.size()));
+
+    List<ViewCanvas<E>> allViews = cellManager.getAllViewCanvases();
+
+    // Clear excess views if layout is larger than series list
+    clearExcessViews(allViews, seriesList.size());
+
+    // Reset to first view and add all series
+    if (!allViews.isEmpty()) {
+      setSelectedImagePane(allViews.getFirst());
+      seriesList.forEach(this::addSeries);
     }
   }
 
-  class MouseHandler extends MouseAdapter {
-    private Point pickPoint = null;
-    private Point point = null;
-    private boolean splitVertical = false;
-    private final ArrayList<ImageViewerPlugin.DragLayoutElement> list = new ArrayList<>();
-
-    @Override
-    public void mousePressed(MouseEvent e) {
-      pickPoint = e.getPoint();
-      point = null;
-      list.clear();
-      Iterator<Entry<LayoutConstraints, Component>> enumVal =
-          ImageViewerPlugin.this.layoutModel.getConstraints().entrySet().iterator();
-      Entry<LayoutConstraints, Component> entry;
-      while (enumVal.hasNext()) {
-        entry = enumVal.next();
-        Component c = entry.getValue();
-        if (c != null) {
-          Rectangle rect = c.getBounds();
-          if (Math.abs(rect.x - pickPoint.x) <= LayoutConstraints.DEFAULT_SPACE
-              && (pickPoint.y >= rect.y && pickPoint.y <= rect.y + rect.height)
-              && entry.getKey().gridx > 0) {
-            splitVertical = true;
-            point = new Point(entry.getKey().gridx, entry.getKey().gridy);
-            break;
-          } else if (Math.abs(rect.y - pickPoint.y) <= LayoutConstraints.DEFAULT_SPACE
-              && (pickPoint.x >= rect.x && pickPoint.x <= rect.x + rect.width)
-              && entry.getKey().gridy > 0) {
-            splitVertical = false;
-            point = new Point(entry.getKey().gridx, entry.getKey().gridy);
-            break;
-          }
+  /** Clears views beyond the required count. */
+  private void clearExcessViews(List<ViewCanvas<E>> views, int requiredCount) {
+    if (views.size() > requiredCount) {
+      setSelectedImagePane(views.get(requiredCount));
+      for (int i = requiredCount; i < views.size(); i++) {
+        ViewCanvas<E> viewPane = getSelectedImagePane();
+        if (viewPane != null) {
+          viewPane.setSeries(null, null);
         }
+        getNextSelectedImagePane();
       }
-      if (point != null) {
-        enumVal = ImageViewerPlugin.this.layoutModel.getConstraints().entrySet().iterator();
-        while (enumVal.hasNext()) {
-          entry = enumVal.next();
-          Component c = entry.getValue();
-          if (c != null) {
-            list.add(new DragLayoutElement(entry.getKey(), c));
-          }
-        }
-
-        Rectangle b = grid.getBounds();
-        double totalWidth = b.getWidth();
-        double totalHeight = b.getHeight();
-
-        for (DragLayoutElement el : list) {
-          el.originalConstraints.weightx = el.originalBound.width / totalWidth;
-          el.originalConstraints.weighty = el.originalBound.height / totalHeight;
-          el.constraints.weightx = el.originalConstraints.weightx;
-          el.constraints.weighty = el.originalConstraints.weighty;
-        }
-      }
-    }
-
-    @Override
-    public void mouseReleased(MouseEvent mouseevent) {
-      pickPoint = null;
-      point = null;
-      list.clear();
-    }
-
-    @Override
-    public void mouseDragged(MouseEvent e) {
-      int mods = e.getModifiers();
-      if (pickPoint != null
-          && point != null
-          && list.size() > 1
-          && (mods & InputEvent.BUTTON1_MASK) != 0) {
-        Point p = e.getPoint();
-        if (splitVertical) {
-          int dx = p.x - pickPoint.x;
-          int limitdx = dx;
-          for (DragLayoutElement element : list) {
-            LayoutConstraints key = element.getConstraints();
-            if (key.gridx == point.x) {
-              int width = element.getOriginalBound().width - dx;
-              Dimension min = element.getComponent().getMinimumSize();
-              int minsize = min == null ? 50 : min.width;
-              if (width < minsize) {
-                limitdx = dx - (minsize - width);
-              }
-            } else if (key.gridx + key.gridwidth == point.x) {
-              int width = element.getOriginalBound().width + dx;
-              Dimension min = element.getComponent().getMinimumSize();
-              int minsize = min == null ? 50 : min.width;
-              if (width < minsize) {
-                limitdx = dx + (minsize - width);
-              }
-            }
-          }
-          for (DragLayoutElement element : list) {
-            LayoutConstraints key = element.getConstraints();
-            LayoutConstraints originkey = element.getOriginalConstraints();
-            if (key.gridx == point.x) {
-              key.weightx =
-                  originkey.weightx
-                      - limitdx * originkey.weightx / element.getOriginalBound().width;
-            } else if (key.gridx + key.gridwidth == point.x) {
-              key.weightx =
-                  originkey.weightx
-                      + limitdx * originkey.weightx / element.getOriginalBound().width;
-            }
-          }
-        } else {
-          int dy = p.y - pickPoint.y;
-          int limitdy = dy;
-          for (DragLayoutElement element : list) {
-            LayoutConstraints key = element.getConstraints();
-            if (key.gridy == point.y) {
-              int height = element.getOriginalBound().height - dy;
-              Dimension min = element.getComponent().getMinimumSize();
-              int minsize = min == null ? 50 : min.height;
-              if (height < minsize) {
-                limitdy = dy - (minsize - height);
-              }
-            } else if (key.gridy + key.gridheight == point.y) {
-              int height = element.getOriginalBound().height + dy;
-              Dimension min = element.getComponent().getMinimumSize();
-              int minsize = min == null ? 50 : min.height;
-              if (height < minsize) {
-                limitdy = dy + (minsize - height);
-              }
-            }
-          }
-          for (DragLayoutElement element : list) {
-            LayoutConstraints key = element.getConstraints();
-            LayoutConstraints originkey = element.getOriginalConstraints();
-            if (key.gridy == point.y) {
-              key.weighty =
-                  originkey.weighty
-                      - limitdy * originkey.weighty / element.getOriginalBound().height;
-            } else if (key.gridy + key.gridheight == point.y) {
-              key.weighty =
-                  originkey.weighty
-                      + limitdy * originkey.weighty / element.getOriginalBound().height;
-            }
-          }
-        }
-        Rectangle b = grid.getBounds();
-        double totalWidth = b.getWidth();
-        double totalHeight = b.getHeight();
-        grid.removeAll();
-        for (DragLayoutElement element : list) {
-          Component c = element.getComponent();
-          LayoutConstraints l = element.getConstraints();
-          c.setPreferredSize(
-              new Dimension(
-                  (int) Math.round(totalWidth * l.weightx),
-                  (int) Math.round(totalHeight * l.weighty)));
-          grid.add(c, l);
-        }
-        setCursor(
-            Cursor.getPredefinedCursor(
-                splitVertical ? Cursor.E_RESIZE_CURSOR : Cursor.S_RESIZE_CURSOR));
-        grid.revalidate();
-        grid.repaint();
-      }
-    }
-
-    @Override
-    public void mouseMoved(MouseEvent me) {
-      setCursor(Cursor.getPredefinedCursor(getCursor(me)));
-    }
-
-    @Override
-    public void mouseExited(MouseEvent mouseEvent) {
-      setCursor(Cursor.getDefaultCursor());
-    }
-
-    private int getCursor(MouseEvent me) {
-      Point p = me.getPoint();
-      for (Entry<LayoutConstraints, Component> entry :
-          ImageViewerPlugin.this.layoutModel.getConstraints().entrySet()) {
-        Component c = entry.getValue();
-        if (c != null) {
-          Rectangle rect = c.getBounds();
-          if ((Math.abs(rect.x - p.x) <= LayoutConstraints.DEFAULT_SPACE
-                  || Math.abs(rect.x + rect.width - p.x) <= LayoutConstraints.DEFAULT_SPACE)
-              && (p.y >= rect.y && p.y <= rect.y + rect.height)) {
-            return Cursor.E_RESIZE_CURSOR;
-          } else if ((Math.abs(rect.y - p.y) <= LayoutConstraints.DEFAULT_SPACE
-                  || Math.abs(rect.y + rect.height - p.y) <= LayoutConstraints.DEFAULT_SPACE)
-              && (p.x >= rect.x && p.x <= rect.x + rect.width)) {
-            return Cursor.S_RESIZE_CURSOR;
-          }
-        }
-      }
-      return Cursor.DEFAULT_CURSOR;
     }
   }
 
-  static class DragLayoutElement {
-    private final LayoutConstraints originalConstraints;
-    private final Rectangle originalBound;
-    private final LayoutConstraints constraints;
-    private final Component component;
+  /** Adds series to available empty view slots, expanding layout if necessary. */
+  private void addSeriesToAvailableSlots(List<MediaSeries<E>> seriesList) {
+    int emptyViewCount = countEmptyViews();
+    List<ViewCanvas<E>> allViews = cellManager.getAllViewCanvases();
 
-    public DragLayoutElement(LayoutConstraints constraints, Component component) {
-      if (constraints == null || component == null) {
-        throw new IllegalArgumentException("Arguments cannot be null");
+    // Expand layout if not enough empty views
+    if (emptyViewCount < seriesList.size()) {
+      int totalNeeded = allViews.size() + seriesList.size();
+      changeLayoutModel(getBestDefaultViewLayout(totalNeeded));
+    }
+
+    // Add series to empty views
+    int seriesIndex = 0;
+    for (ViewCanvas<E> view : cellManager) {
+      if (view.getSeries() == null && seriesIndex < seriesList.size()) {
+        setSelectedImagePane(view);
+        addSeries(seriesList.get(seriesIndex++));
       }
-      this.constraints = constraints;
-      this.originalConstraints = constraints.copy();
-      this.component = component;
-      this.originalBound = component.getBounds();
     }
+  }
 
-    public LayoutConstraints getOriginalConstraints() {
-      return originalConstraints;
-    }
-
-    public Rectangle getOriginalBound() {
-      return originalBound;
-    }
-
-    public LayoutConstraints getConstraints() {
-      return constraints;
-    }
-
-    public Component getComponent() {
-      return component;
-    }
+  /** Counts the number of empty views in the current layout. */
+  private int countEmptyViews() {
+    return (int)
+        cellManager.getAllViewCanvases().stream().filter(v -> v.getSeries() == null).count();
   }
 
   public void selectLayoutPositionForAddingSeries(List<MediaSeries<E>> seriesList) {
@@ -1219,10 +1254,11 @@ public abstract class ImageViewerPlugin<E extends ImageElement> extends ViewerPl
         nbSeriesToAdd = 1;
       }
     }
-    int pos = view2ds.size() - nbSeriesToAdd;
+    List<ViewCanvas<E>> allViews = cellManager.getAllViewCanvases();
+    int pos = allViews.size() - nbSeriesToAdd;
     if (pos < 0) {
       pos = 0;
     }
-    setSelectedImagePane(view2ds.get(pos));
+    setSelectedImagePane(allViews.get(pos));
   }
 }
